# LocalAI

./: .gitignore  SETUP.md  build-extension.sh  build-tauri.sh  dev-setup.sh  index.html  package-lock.json  package.json
.github/workflows/: release.yml
extension/: package-lock.json  package.json
extension/src/: extension.ts  panel.ts
extension/webview/: panel.html  panel.js
license-worker/: generate-keys.js  package.json  wrangler.toml
license-worker/src/: index.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: installer.rs  license.rs  main.rs  model_mgr.rs  ollama_api.rs  system_info.rs
src/components/: Activation.tsx  AgentPicker.tsx  Dashboard.tsx  Installer.tsx  ModelPicker.tsx  SystemScan.tsx
